add gc log test